--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "firebase": "^12.4.0",
     "lucide-react-native": "^0.545.0",
     "nativewind": "^4.2.1",
+    "prop-types": "^15.8.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
