--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.8",
     "firebase": "^12.4.0",
+    "lottie-react-native": "~7.3.1",
     "lucide-react-native": "^0.545.0",
     "nativewind": "^4.2.1",
     "prop-types": "^15.8.1",
