--- a/app.json
+++ b/app.json
@@ -42,6 +42,9 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "backendUrl": "http://localhost:3000"
     }
   }
 }
