--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-native-svg": "^15.12.1",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "victory-native": "^36.9.2"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
