--- a/app.json
+++ b/app.json
@@ -44,8 +44,7 @@
       "reactCompiler": true
     },
     "extra": {
-      "backendUrl": "https://petly-backend-d2dg.onrender.com"
-      
+      "backendUrl": "http://localhost:3000"
     }
   }
 }
