--- a/app.json
+++ b/app.json
@@ -11,6 +11,7 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.petly"
     },
+    "icon": "./assets/images/petly_icon.png",
     "android": {
       "package": "com.petly",
       "adaptiveIcon": {
@@ -29,7 +30,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/cat_splash.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff",
@@ -44,7 +45,7 @@
       "reactCompiler": true
     },
     "extra": {
-      "backendUrl": "http://localhost:3000"
+      "backendUrl": "https://petly-backend-d2dg.onrender.com"
     }
   }
 }
