--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "petly",
     "slug": "petly",
-    "owner": "bobbydavidson", 
+    "owner": "captainsparrow23", 
     "version": "1.0.0",
     "orientation": "portrait",
     "scheme": "petly",
