--- a/.env
+++ b/.env
@@ -1,4 +1,1 @@
-EXPO_PUBLIC_APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
-EXPO_PUBLIC_APPWRITE_PROJECT_ID=68ed9984003063457a60
-EXPO_PUBLIC_APPWRITE_PROJECT_NAME="Petify"
-EXPO_PUBLIC_API_BASE_URL=http://localhost:3000
+EXPO_PUBLIC_API_BASE_URL=https://petly-gsxb.onrender.com
