--- a/app.json
+++ b/app.json
@@ -52,7 +52,7 @@
       "reactCompiler": true
     },
     "extra": {
-      "backendUrl": "https://petly-backend-d2dg.onrender.com",
+      "backendUrl": "https://petly-gsxb.onrender.com",
       "googleWebClientId": "992118540403-l5kre9ulblv1i7uu5kmkhrbgvp470esv.apps.googleusercontent.com",
       "googleIosClientId": "992118540403-mle506j12qb2feirctju62q5ra74qa8n.apps.googleusercontent.com",
       "googleAndroidClientId": ""
