--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/drawer": "^7.5.10",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.18",
+    "burnt": "^0.13.0",
     "expo": "~54.0.13",
     "expo-auth-session": "~7.0.8",
     "expo-constants": "~18.0.9",
