--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "firebase": "^12.4.0",
     "lottie-react-native": "~7.3.1",
     "lucide-react-native": "^0.545.0",
+    "moti": "^0.30.0",
     "nativewind": "^4.2.1",
     "prop-types": "^15.8.1",
     "react": "19.1.0",
