--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/drawer": "^7.5.10",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.18",
+    "@react-navigation/stack": "^7.6.13",
     "@tabler/icons-react": "^3.36.0",
     "burnt": "^0.13.0",
     "expo": "~54.0.13",
