--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "react-native-actions-sheet": "^0.9.8",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-purchases": "^9.6.12",
+    "react-native-purchases-ui": "^9.6.12",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
